Added first blocks

--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.scottylu.oyster": "Oyster Card"
+  "item.scottylu.oyster": "Oyster Card",
+
+  "itemgroup.scotty": "Scotty's London Underground"
 }
