Added first blocks

--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -1,3 +1,9 @@
 {
-  "item.scottylu.oyster": "Oyster Card"
+  "item.scottylu.oyster": "Oyster Card",
+
+  "itemgroup.scotty": "Scotty's London Underground",
+
+  "block.scottylu.helppoint_even": "Help Point (Even)",
+  "block.scottylu.helppoint_odd": "Help Point (Odd)"
+
 }
