Added Station Pole

--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.scottylu.oyster": "Oyster Card",
 
+  "block.scottylu.station_pole": "Station Pole",
+
   "itemgroup.scotty": "Scotty's London Underground",
   "itemgroup.scotty_colours": "Scotty's LU Colours",
   "itemgroup.scotty_line_colours": "Scotty's LU Line Colours",
