--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -46,6 +46,8 @@
   "block.scottylu.sign_platform_4": "Platform 4 Sign",
   "block.scottylu.sign_exit_even": "Exit Sign (Even)",
   "block.scottylu.sign_exit_odd": "Exit Sign (Odd)",
+  "block.scottylu.sign_roundel_odd": "LU Roundel (Odd)",
+  "block.scottylu.sign_roundel_even": "LU Roundel (Even)",
 
 
 
