--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.scottylu.oyster": "Oyster Card",
 
   "block.scottylu.station_pole": "Station Pole",
+  "block.scottylu.station_bin": "Station Bin",
 
   "itemgroup.scotty": "Scotty's London Underground",
   "itemgroup.scotty_colours": "Scotty's LU Colours",
