--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -51,6 +51,7 @@
 
 
   "block.scottylu.sign_pole_cctv_small": "CCTV Small Sign (On Pole)",
+  "block.scottylu.sign_pole_beware_trains": "Beware of Trains Sign (On Pole)",
   "block.scottylu.sign_pole_platform_1": "Platform 1 Sign (On Pole)",
   "block.scottylu.sign_pole_platform_2": "Platform 2 Sign (On Pole)",
   "block.scottylu.sign_pole_platform_3": "Platform 3 Sign (On Pole)",
