--- a/src/main/resources/assets/scottylu/lang/en_us.json
+++ b/src/main/resources/assets/scottylu/lang/en_us.json
@@ -4,14 +4,15 @@
   "block.scottylu.station_pole": "Station Pole",
   "block.scottylu.station_bin": "Station Bin",
 
-  "block.scottylu.model_swap.tooltip": "Right-click for model variants",
+  "tooltip.scottylu.model_swap": "§6 Model Variants Available",
+  "tooltip.scottylu.oyster": "§6 Use on compatible blocks to switch model.",
 
   "itemgroup.scotty": "Scotty's London Underground",
   "itemgroup.scotty_colours": "Scotty's LU Colours",
   "itemgroup.scotty_line_colours": "Scotty's LU Line Colours",
   "itemgroup.scotty_signs": "Scotty's LU Signs",
   "itemgroup.scotty_signs_poles": "Scotty's LU Signs on Poles",
-  "itemgroup.scotty_signs_floor": "Scotty's LU Floor Signs",
+  "itemgroup.scotty_signs_floor_roof": "Scotty's LU Floor/Ceiling Signs",
 
   "block.scottylu.helppoint_even": "Help Point",
   "block.scottylu.colour_tube": "Tube",
@@ -56,6 +57,12 @@
   "block.scottylu.floor_sign_platform_4": "Platform 4 Sign (Floor)",
   "block.scottylu.floor_sign_mtg": "MIND THE GAP",
   "block.scottylu.floor_sign_byl": "STAND BEHIND YELLOW LINE",
+
+
+  "block.scottylu.ceiling_sign_platform_1": "Platform 1 Sign (Ceiling)",
+  "block.scottylu.ceiling_sign_platform_2": "Platform 2 Sign (Ceiling)",
+  "block.scottylu.ceiling_sign_platform_3": "Platform 3 Sign (Ceiling)",
+  "block.scottylu.ceiling_sign_platform_4": "Platform 4 Sign (Ceiling)",
 
 
 
